--- a/08_creating_paragraphs_with_style_functions.html
+++ b/08_creating_paragraphs_with_style_functions.html
@@ -15,7 +15,7 @@
 				.enter()
 				.append("p")
 				.text(function(d) {
-					return "I can count up to kh this " + d;
+					return "I can count up to kh this s" + d;
 				})
 				.style("color", function(d) {
 					if (d > 15) {	//Threshold of 15
